<resources>
    <string name="app_name">andreas</string>
    <string name="title_activity_main_int">DaGame</string>
    <string name="coordinates">No coordinates to display :(</string>
    <string name="main_menu">menu</string>
    <string name="emptyMenu">no information to display</string>
    <string name="navigation_drawer_open">open</string>
    <string name="navigation_drawer_close">close</string>
    <string name="action_settings">settings</string>
    <string name="label_activity_gameMode">gameMode</string>
    <string name="data">data</string>
    <string name="minigame">minigame</string>
    <string name="points_text">Points:</string>
    <string name="points_score">0</string>
    <string name="zoombutton_text">Zoom to me!</string>
    <string name="targetbutton_text">Find Target</string>
    <string name="login_text">Username</string>
    <string name="password_text">Password</string>
    <string name="login_button">Login</string>
    <string name="register_button">Register</string>
    <string name="label_login">Login</string>
    <string name="register_click_text">Register here!</string>
    <string name="title_activity_register">Register</string>
    <string name="email_text">Email</string>
    <string name="confirm_password_text">Confirm password</string>
    <string name="start">Start the game!</string>
    <string name="gyroscope">  </string>
    <string name="acceleration">  </string>
    <string name="light">  </string>
    <string name="explain">Try to have an acceleration of 2.0 m/s² as well as a light intensity of 1000.0 lx and a rotation vector of 3.0 rad/s to win 100 points. </string>
    <string name="information">Press the button to start</string>
    <string name="timer"> </string>
    <string name="explanation">Try to have an acceleration of 4.0 m/s² while on your bike. You win 50 points if you succeed. </string>
    <string name="startbutton">Start the game</string>
    <string name="started">Something has changed</string>
    <string name="exp_magnetic">Try to find a magnetic field with a magnitude of 1.0 mT (= 1000.0 µT). If you do so, you will get 100 points. </string>
    <string name="song_expl">Try to find or create a very loud noise. If it is loud enough, you will get 50 points!</string>
    <string name="combination_two">Try to find a magnetic field of 1.0 mT as well as a light intensity of 1000.0 lx!</string>
    <string name="powerUpOffensive">offensive</string>
    <string name="powerUpOffensiveUpdateFrequency">increase update frquency</string>
    <string name="powerUpOffensiveEasyKill">easy kill move</string>
    <string name="powerUpDefensiveStopSignal">Signal stop Moving</string>
    <string name="powerUpDefensivePictures">only pictures</string>
    <string name="powerUpDefensiveTitle">Defensive</string>
    <string name="powerUpDefensiveSound">only Sound</string>
    <string name="powerUpDefensivePursuer">circle around pursuer</string>
    <string name="powerUpDefensiveUpdateFrequency">slow update frequency</string>
    <string name="powerUpDefensiveHardKill">hard kill move</string>
    <string name="label_shop">shop</string>
    <string name="buy_text">buy</string>

</resources>
