<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            layout="@layout/toolbar_low_in_rank"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="58dp"
            android:hint="Points : FAIL"
            android:textSize="@dimen/text_size_shop_title"
            android:id="@+id/powerUpPoints"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/powerUpOffensive"
            android:background="#F44336"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/text_size_shop_title"
            android:layout_below="@+id/powerUpPoints"
            android:id="@+id/powerUpOffensiveTitle"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/powerUpOffensiveUpdateFrequency"
            android:textColor="#F44336"
            android:layout_below="@+id/powerUpOffensiveTitle"
            android:gravity="left"
            android:background="#FFFFFF"
            android:textSize="@dimen/text_size_shop_item"
            android:id="@+id/powerUpOffensiveUpdateFrequency" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buy_text"
            android:textColor="#000000"
            android:textSize="@dimen/text_size_shop_item"
            android:layout_below="@+id/powerUpOffensiveTitle"
            android:layout_alignParentRight="true"
            android:id="@+id/buypowerUpOffensiveUpdateFrequency"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/powerUpOffensiveEasyKill"
            android:textColor="#F44336"
            android:layout_below="@+id/powerUpOffensiveUpdateFrequency"
            android:gravity="left"
            android:background="#FFFFFF"
            android:textSize="@dimen/text_size_shop_item"
            android:id="@+id/powerUpOffensiveEasyKill"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buy_text"
            android:textColor="#000000"
            android:textSize="@dimen/text_size_shop_item"
            android:layout_below="@+id/powerUpOffensiveUpdateFrequency"
            android:layout_alignParentRight="true"
            android:id="@+id/buypowerUpOffensiveEasyKill"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/powerUpDefensiveTitle"
            android:background="#2196f3"
            android:textColor="#FFFFFF"
            android:layout_below="@+id/powerUpOffensiveEasyKill"
            android:textSize="@dimen/text_size_shop_title"
            android:id="@+id/powerUpDefensiveTitle"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/powerUpDefensiveStopSignal"
            android:textColor="#2196f3"
            android:layout_below="@+id/powerUpDefensiveTitle"
            android:gravity="left"
            android:background="#FFFFFF"
            android:textSize="@dimen/text_size_shop_item"
            android:id="@+id/powerUpDefensiveStopSignal"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buy_text"
            android:textColor="#000000"
            android:textSize="@dimen/text_size_shop_item"
            android:layout_alignParentRight="true"
            android:id="@+id/buypowerUpDefensiveStopSignal"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/powerUpDefensivePictures"
            android:textColor="#2196f3"
            android:layout_below="@+id/powerUpDefensiveStopSignal"
            android:gravity="left"
            android:background="#FFFFFF"
            android:textSize="@dimen/text_size_shop_item"
            android:id="@+id/powerUpDefensivePictures"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/powerUpDefensiveSound"
            android:textColor="#2196f3"
            android:layout_below="@+id/powerUpDefensivePictures"
            android:gravity="left"
            android:background="#FFFFFF"
            android:textSize="@dimen/text_size_shop_item"
            android:id="@+id/powerUpDefensiveSound"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/powerUpDefensivePursuer"
            android:textColor="#2196f3"
            android:layout_below="@+id/powerUpDefensiveSound"
            android:gravity="left"
            android:background="#FFFFFF"
            android:textSize="@dimen/text_size_shop_item"
            android:id="@+id/powerUpDefensivePursuer"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/powerUpDefensiveUpdateFrequency"
            android:textColor="#2196f3"
            android:layout_below="@+id/powerUpDefensivePursuer"
            android:gravity="left"
            android:background="#FFFFFF"
            android:textSize="@dimen/text_size_shop_item"
            android:id="@+id/powerUpDefensiveUpdateFrequency"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/powerUpDefensiveHardKill"
            android:textColor="#2196f3"
            android:layout_below="@+id/powerUpDefensiveUpdateFrequency"
            android:gravity="left"
            android:background="#FFFFFF"
            android:textSize="@dimen/text_size_shop_item"
            android:id="@+id/powerUpDefensiveHardKill"/>
    </RelativeLayout>
</ScrollView>